# tower-lsp-max

./: .gitignore  .mesh_state.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOC_COVERAGE_LOG.md  GETTING_STARTED.md  HOOKS_ADVANCED.md  HOOKS_GUIDE.md  HOOKS_INDEX.md  HOOKS_QUICK_REFERENCE.md  HOOKS_TEMPLATES.md  Justfile  MCP_DOCUMENTATION_INDEX.md  MCP_DOCUMENTATION_README.md  MCP_INTEGRATION_GUIDE.md  MCP_PLUGINS_REGISTRY.md  MCP_QUICK_REFERENCE.md  MCP_SERVERS_DOCUMENTATION.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  ROADMAP.md  TEST_INFRA.md  TEST_READY.md  THESIS.md  detect_capabilities.py  generate.sh  generate_axum_lsp.py  generate_tests.sh  new_8020_citations.bib  new_citations.bib  refund_receipt.txt  run_tex_lsp.py  rust-toolchain.toml  write_thesis.py
crates/gc005-wasm4pm-adapter/: Cargo.toml
crates/gc005-wasm4pm-adapter/src/: lib.rs
crates/gc005-wasm4pm-adapter/tests/: customization-map.json  dogfood_gc004.rs  dogfood_gc005.rs  dogfood_gc006.rs  dogfood_gc006_calver.rs  dogfood_gc007.rs  dogfood_gc008.rs  f8_equation_enforcement.rs  pack-plan.json  projection-map.json
crates/gc005-wasm4pm-adapter/tests_receipts/: receipts.jsonl
crates/lsif-cli/: Cargo.toml
crates/lsif-cli/src/: main.rs
crates/lsif-linker/: Cargo.toml
crates/lsif-linker/src/: lib.rs
crates/lsif-tests/: Cargo.toml
crates/lsif-tests/src/: lib.rs
crates/lsif-tests/tests/: coverage.rs  export.rs  general.rs  validate.rs
crates/lsif-typescript/: Cargo.toml  build.rs
crates/lsif-typescript/src/: emit.rs  generated.rs  lib.rs
crates/lsp-max-base/: Cargo.toml
crates/lsp-max-base/src/: abstractions.rs  lib.rs  protocol.rs
crates/lsp-max-cli/: .mesh_state.json  Cargo.toml
crates/lsp-max-cli/src/: main.rs
crates/lsp-max-client/: Cargo.toml
crates/lsp-max-client/src/: builder.rs  client.rs  server_handle.rs
crates/lsp-max-compositor/: Cargo.toml  marketplace.json
crates/lsp-max-compositor/benches/: compositor_backpressure.rs  compositor_micro.rs
crates/lsp-max-compositor/src/: capability_merge.rs  child_process.rs  compositor_client.rs  config.rs  diagnostic_ack.rs  diagnostic_buffer.rs  flush_coordinator.rs  gate_file.rs  health_response.rs  lib.rs  main.rs  merge.rs  receipt.rs  receipt_chain.rs  registry.rs  server.rs  state_response.rs
crates/lsp-max-compositor/tests/: e2e.rs  fanout_latency.rs  gate_path_roundtrip_witness.rs  integration.rs  speciation.rs
crates/lsp-max-live/: Cargo.toml
crates/lsp-max-lsif/: Cargo.toml
crates/lsp-max-lsif/src/: coverage.rs  lib.rs  lsif.rs  lsif_builder.rs  lsif_indexer.rs  lsif_reader.rs  lsif_types.rs
crates/lsp-max-lsif/tests/: emitter_witness.rs  lsif_conformance_tests.rs
crates/lsp-max-specgen/: Cargo.toml  README.md
crates/lsp-max-specgen/fixtures/: minimal-metaModel.json
crates/lsp-max-specgen/src/: metamodel.rs
crates/lsp-max-specgen/tests/: conformance.rs  test_serialization.rs
crates/playground/: Cargo.toml
crates/playground/ocel/: admitted_evidence.ocel.json  digests.jsonl  events.jsonl  objects.jsonl  verdicts.jsonl
crates/playground/receipts/: GALL-CHECKPOINT-002.txt  GALL-CHECKPOINT-003.receipt.json  GALL-CHECKPOINT-003.txt  GALL-CHECKPOINT-004.receipt.json  GALL-CHECKPOINT-004.txt  GALL-CHECKPOINT-006.receipt.json  GALL-CHECKPOINT-006.txt  GALL-CHECKPOINT-007.receipt.json  GALL-CHECKPOINT-007.txt  GALL-CHECKPOINT-008.receipt.json  GALL-CHECKPOINT-008.txt  authority_surface.toml
crates/playground/src/: capabilities.rs  lib.rs
crates/tower-lsp-max-cli/: .mesh_state.json  Cargo.toml  refund_receipt.txt
crates/tower-lsp-max-cli/src/: main.rs
crates/tower-lsp-max-client/: Cargo.toml
crates/tower-lsp-max-client/src/: builder.rs  client.rs  lib.rs  server_handle.rs
crates/wasm4pm-lsp/: Cargo.toml
crates/wasm4pm-lsp/src/: main.rs
crates/wasm4pm-lsp/tests/: .sync_marker  dogfood_gc004.rs  dogfood_gc005.rs  dogfood_gc006_calver.rs  pack-plan.json  projection-map.json  receipts.json
crates/wasm4pm-lsp/tests_receipts/: receipts.jsonl
examples/anti-llm-cheat-lsp/: Cargo.toml  README.md  admissibility_report.md
examples/anti-llm-cheat-lsp/benches/: perf_refactors.rs
examples/anti-llm-cheat-lsp/ocel/: anti_llm_lsp_ocel.json  ocel_gap_report.md
examples/anti-llm-cheat-lsp/src/: config.rs  diagnostics.rs  engine.rs  lib.rs  main.rs  observations.rs  ocel.rs  server.rs
examples/anti-llm-cheat-lsp/tests/: dogfood.rs
examples/anti-llm-cheat-lsp/transcripts/: _cancelRequest_positive.jsonl  callHierarchy_incomingCalls_positive.jsonl  completionItem_resolve_positive.jsonl  completion_list_apply_kind_positive.jsonl  debug_message_kind_positive.jsonl  documentLink_resolve_positive.jsonl  exit_positive.jsonl  initialize_positive.jsonl  initialized_positive.jsonl  inlayHint_resolve_positive.jsonl  ranges_formatting_positive.jsonl  relative_patterns_positive.jsonl  textDocument_declaration_positive.jsonl  textDocument_didOpen_positive.jsonl  textDocument_didSave_positive.jsonl  textDocument_inlayHint_positive.jsonl  (+25 more)
examples/anti-llm-lsp/: Cargo.toml  README.md  admissibility_report.md
examples/axum-lsp/: Cargo.toml  ggen.toml
examples/bevy-lsp/: Cargo.toml  README.md  build.rs  build.rs.backup  ggen.toml  ontology-summary.txt
examples/clap-noun-verb-lsp/: Cargo.toml  README.md
lsp-max-agent/: Cargo.toml
lsp-max-agent/src/: lib.rs
lsp-max-macros/: Cargo.toml
lsp-max-protocol/: Cargo.toml
lsp-max-protocol/src/: conformance.rs  core.rs  custom_methods.rs  lib.rs  lsp_3_18.rs
lsp-max-runtime/: Cargo.toml
lsp-max-runtime/src/: ledger.rs  lib.rs  mesh.rs  mesh_types.rs  sha256.rs
tower-lsp-max-agent/: Cargo.toml
tower-lsp-max-agent/src/: lib.rs
tower-lsp-max-macros/: Cargo.toml
tower-lsp-max-macros/src/: lib.rs
tower-lsp-max-protocol/: Cargo.toml
tower-lsp-max-protocol/src/: conformance.rs  core.rs  custom_methods.rs  diagnostics.rs  hooks.rs  lib.rs  lsp_3_18.rs  policy.rs
tower-lsp-max-runtime/: Cargo.toml  refund_receipt.txt
tower-lsp-max-runtime/src/: ledger.rs  lib.rs  mesh.rs  mesh_hooks.rs  mesh_types.rs  sha256.rs  typestate.rs
(+815 files in other folders)
