[package]
name = "tower-lsp-max"
version = "26.6.5"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "Language Server Protocol implementation based on Tower, upgraded for maximal LSP capability projection"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tower-lsp"
repository = "https://github.com/ebkalderon/tower-lsp"
documentation = "https://docs.rs/tower-lsp/"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["FEATURES.md"]

[features]
default = ["runtime-tokio"]
runtime-agnostic = ["async-codec-lite"]
runtime-tokio = ["tokio", "tokio-util"]
proposed = ["lsp-types-max/proposed"]

[dependencies]
async-codec-lite = { version = "0.0", optional = true }
async-trait = "0.1"
auto_impl = "1.0"
bytes = "1.0"
dashmap = "5.1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
httparse = "1.8"
libc = "0.2"
lsp-types-max = { path = "../lsp-types-max", version = "26.6.5", features = ["proposed"] }
url = { version = "2.5", features = ["serde"] }
memchr = "2.5"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", optional = true, features = ["time", "macros", "rt", "io-util", "net"] }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tower-lsp-max-macros = { version = "26.6.5", path = "./tower-lsp-max-macros" }
tower-lsp-max-protocol = { version = "26.6.5", path = "./tower-lsp-max-protocol" }
tower-lsp-max-lsif = { path = "./crates/tower-lsp-max-lsif" }
tower-lsp-max-runtime = { version = "26.6.5", path = "./tower-lsp-max-runtime" }
tower-lsp-max-agent = { version = "26.6.5", path = "./tower-lsp-max-agent" }
tower-lsp-max-base = { path = "./crates/tower-lsp-max-base" }
tower = { version = "0.4", default-features = false, features = ["util"] }
tracing = "0.1"

[dev-dependencies]
async-tungstenite = { version = "0.22", features = ["tokio-runtime"] }
tracing-subscriber = "0.3"
tokio = { version = "1.17", features = ["io-util", "io-std", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
ws_stream_tungstenite = { version = "0.10", features = ["tokio_io"] }
tower-lsp-max-playground = { path = "crates/playground" }
tempfile = "3"
ropey = "1"
oxigraph = "0.5.8"
wasm4pm-compat = { path = "../wasm4pm-compat", version = "26.6.5", features = ["formats", "strict", "wasm4pm"] }
uuid = { version = "1.0", features = ["v4"] }
ed25519-dalek = "2.0"

[workspace]
resolver = "3"
members = [
    ".",
    "tower-lsp-max-macros",
    "tower-lsp-max-protocol",
    "tower-lsp-max-runtime",
    "tower-lsp-max-agent",
    "crates/tower-lsp-max-specgen",
    "crates/tower-lsp-max-cli",
    "crates/playground",
    "crates/tower-lsp-max-client",
    "crates/tower-lsp-max-base",
    "crates/tower-lsp-max-live",
    "crates/tower-lsp-max-lsif",
    "crates/tower-lsp-max-adapters/auto_lsp_adapter",
    "examples/pattern-lsp",
    "examples/clap-noun-verb-lsp",
]
