[package]
name = "tower-lsp-max"
version = "26.6.8"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "Language Server Protocol implementation based on Tower, upgraded for maximal LSP capability projection"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tower-lsp"
repository = "https://github.com/ebkalderon/tower-lsp"
documentation = "https://docs.rs/tower-lsp/"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["FEATURES.md"]

[features]
default = ["runtime-tokio"]
runtime-agnostic = ["async-codec-lite"]
runtime-tokio = ["tokio", "tokio-util"]
proposed = ["lsp-types-max/proposed"]

[dependencies]
async-codec-lite = { version = "0.0", optional = true }
async-trait = "0.1"
auto_impl = "1.0"
auto_lsp_adapter = { workspace = true }
bytes = "1.0"
dashmap = "5.1"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
httparse = "1.8"
libc = "0.2"
lsp-types-max = { path = "../lsp-types-max", version = "26.6.8", features = ["proposed"] }
url = { version = "2.5", features = ["serde"] }
memchr = "2.5"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", optional = true, features = ["time", "macros", "rt", "io-util", "net"] }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tower-lsp-max-macros = { version = "26.6.8", path = "./tower-lsp-max-macros" }
tower-lsp-max-protocol = { version = "26.6.8", path = "./tower-lsp-max-protocol" }
tower-lsp-max-lsif = { path = "./crates/tower-lsp-max-lsif" }
tower-lsp-max-runtime = { version = "26.6.8", path = "./tower-lsp-max-runtime" }
tower-lsp-max-agent = { version = "26.6.8", path = "./tower-lsp-max-agent" }
tower-lsp-max-base = { path = "./crates/tower-lsp-max-base" }
tower = { version = "0.4", default-features = false, features = ["util"] }
tracing = "0.1"

[dev-dependencies]
async-tungstenite = { version = "0.22", features = ["tokio-runtime"] }
tracing-subscriber = "0.3"
tokio = { version = "1.17", features = ["io-util", "io-std", "macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
ws_stream_tungstenite = { version = "0.10", features = ["tokio_io"] }
tower-lsp-max-playground = { path = "crates/playground" }
tempfile = "3"
ropey = "1"
oxigraph = { version = "0.5.8", default-features = false, features = ["rdf-12"] }
wasm4pm-compat = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
ed25519-dalek = "2.0"
walkdir.workspace = true

[workspace]
resolver = "3"
members = [
    ".",
    "tower-lsp-max-macros",
    "tower-lsp-max-protocol",
    "tower-lsp-max-runtime",
    "tower-lsp-max-agent",
    "crates/tower-lsp-max-specgen",
    "crates/tower-lsp-max-cli",
    "crates/playground",
    "crates/tower-lsp-max-client",
    "crates/tower-lsp-max-base",
    "crates/tower-lsp-max-live",
    "crates/tower-lsp-max-lsif",
    "crates/tower-lsp-max-adapters/auto_lsp_adapter",
    "crates/wasm4pm-lsp",
    "examples/pattern-lsp",
    "examples/anti-llm-lsp",
    "examples/clap-noun-verb-lsp",
    "examples/wasm4pm-compat-lsp",
    "examples/axum-lsp",
    "examples/bevy-lsp",
    "examples/tex-lsp",
    "crates/gc005-wasm4pm-adapter",
    "crates/tower-lsp-max-adapters/auto-lsp-core",
    "crates/tower-lsp-max-adapters/auto-lsp-codegen",
]

[workspace.package]
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ebkalderon/tower-lsp"
edition = "2021"

[workspace.dependencies]
wasm4pm-compat = { version = "26.6.8", features = ["formats", "strict", "wasm4pm"] }
lsp-types-max = { path = "../lsp-types-max", version = "26.6.8", features = ["proposed"] }
tree-sitter = "0.26.5"
tree-sitter-language = "0.1.7"
downcast-rs = "2.0.2"
streaming-iterator = "0.1.9"
parking_lot = "0.12.5"
texter = { version = "0.3.0", default-features = false, features = ["tree-sitter"] }
log = "0.4.29"
rayon = "1.11.0"
anyhow = "1.0.101"
regex = "1.11.1"
rstest = "0.25.0"
salsa = "0.26.0"
dashmap = "6.1.0"
thiserror = "2.0.18"
ariadne = "0.6.0"
walkdir = "2.5.0"
rayon-par-bridge = "0.1.0"
bon = "3.6.4"
auto-lsp-core = { path = "crates/tower-lsp-max-adapters/auto-lsp-core" }
auto-lsp-codegen = { path = "crates/tower-lsp-max-adapters/auto-lsp-codegen" }
auto_lsp_adapter = { path = "crates/tower-lsp-max-adapters/auto_lsp_adapter" }

[patch.crates-io]
wasm4pm-compat = { path = "../wasm4pm-compat" }
wasm4pm = { path = "../wasm4pm/wasm4pm" }
