[package]
name = "lsp-max-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Agent integration and analysis bundles for lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lsp-max-protocol = { path = "../lsp-max-protocol", version = "26.6.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3", features = ["json"] }
