[package]
name = "lsp-max-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Internal procedural macros for lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
