[package]
name = "lsp-max-protocol"
version = "26.6.9"
edition = "2021"
description = "Maximal capability vector, diagnostics, and protocol types for lsp-max"
publish = false

[lib]
doctest = false

[dependencies]
lsp-types-max = { path = "../../lsp-types-max", version = "26.6.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
