[package]
name = "lsp-max-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Maximal capability vector, diagnostics, and protocol types for lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[dependencies]
lsp-types-max = { path = "../../lsp-types-max", version = "26.6.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm4pm-compat = { workspace = true }
