[package]
name = "lsp-max-runtime"
version = "26.6.9"
edition = "2021"
description = "Runtime snapshotting and state tracking for lsp-max"
publish = false

[dependencies]
lsp-max-protocol = { path = "../lsp-max-protocol", version = "26.6.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types-max = { path = "../../lsp-types-max", version = "26.6.8" }
oxigraph = { version = "0.5.8", default-features = false }
lsp-max-base = { path = "../crates/tower-lsp-max-base" }
lsp-max-lsif = { path = "../crates/tower-lsp-max-lsif" }
blake3 = "1.3"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1"
dashmap = "5.1"
rand_core = { version = "0.6", features = ["getrandom"] }
wasm4pm-compat = { workspace = true }
url = "2.5"


[dev-dependencies]
tempfile = "3"
proptest = "1"
