[package]
name = "lsp-max-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Runtime snapshotting and state tracking for lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lsp-max-protocol = { path = "../lsp-max-protocol", version = "26.6.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types-max = { path = "../../lsp-types-max", version = "26.6.8" }
oxigraph = { version = "0.5.8", default-features = false }
lsp-max-base = { path = "../crates/lsp-max-base", version = "26.6.9" }
lsp-max-lsif = { path = "../crates/lsp-max-lsif", version = "26.6.9" }
blake3 = "1.3"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror.workspace = true
dashmap.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
wasm4pm-compat = { workspace = true }
url = "2.5"


[dev-dependencies]
tempfile = "3"
proptest = "1"
