[package]
name = "tower-lsp-max-agent"
version = "26.6.4"
edition = "2021"
description = "Agent integration and analysis bundles for tower-lsp-max"

[dependencies]
tower-lsp-max-protocol = { path = "../tower-lsp-max-protocol", version = "26.6.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9.7", features = ["json"] }
