[package]
name = "tower-lsp-max-protocol"
version = "26.6.4"
edition = "2021"
description = "Maximal capability vector, diagnostics, and protocol types for tower-lsp-max"

[lib]
doctest = false

[dependencies]
lsp-types = "0.97.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
