[package]
name = "tower-lsp-max-runtime"
version = "26.6.4"
edition = "2021"
description = "Runtime snapshotting and state tracking for tower-lsp-max"

[dependencies]
tower-lsp-max-protocol = { path = "../tower-lsp-max-protocol", version = "26.6.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.94.1"

[dev-dependencies]
tempfile = "3"
