[package]
name = "gc005-wasm4pm-adapter"
version = "26.6.9"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm4pm-compat = { workspace = true }
wasm4pm = { path = "../../../wasm4pm/wasm4pm" }

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
walkdir = "2"
tower_lsp_max_max = { package = "tower-lsp-max", path = "../.." }
lsp-types-max = { path = "../../../lsp-types-max" }
url = "2"
