[package]
name = "lsif-linker"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Cross-file LSIF reference linker: resolves import monikers to export monikers via attach edges"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
