[package]
name = "lsp-max-base"
version = "26.6.9"
edition = "2021"
description = "Base protocol codec for lsp-max"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanchatmangpt/lsp-max"

[dependencies]
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.8"
memchr = "2.5"

