[package]
name = "lsp-max-base"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Base protocol codec for lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.8"
memchr = "2.5"

