[package]
name = "lsp-max-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Actuation grammar CLI for lsp-max: noun/verb surface built on clap-noun-verb"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
linkme = "0.3.36"
lsp-max = { path = "../..", version = "26.6.9" }
lsp-max-protocol = { path = "../../lsp-max-protocol", version = "26.6.9" }
lsp-types-max = { path = "../../../lsp-types-max", version = "26.6.8" }
lsp-max-agent = { path = "../../lsp-max-agent", version = "26.6.9" }
lsp-max-runtime = { path = "../../lsp-max-runtime", version = "26.6.9" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[[bin]]
name = "lsp-coverage"
path = "src/bin/lsp-coverage.rs"

[dev-dependencies]
tempfile = "3"