[package]
name = "lsp-max-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Language Server Protocol Client framework based on tower"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lsp-max-macros = { path = "../../lsp-max-macros", version = "26.6.9" }
lsp-types = { package = "lsp-types-max", path = "../../../lsp-types-max", version = "26.6.8" }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "io-util", "rt", "time"] }
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "io-util", "rt", "rt-multi-thread", "time", "macros"] }
