[package]
name = "lsp-max-live"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Live process tracking and mining capabilities for lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
