[package]
name = "lsp-max-lsif"
version = "26.6.9"
edition = "2021"
description = "LSIF export and conformance for lsp-max"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seanchatmangpt/lsp-max"

[dependencies]
lsp-types-max = { path = "../../../lsp-types-max", version = "26.6.8" }
oxigraph = { version = "0.5.8", default-features = false, features = ["rdf-12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
