[package]
name = "lsp-max-lsif"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LSIF export and conformance for lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lsp-types-max = { path = "../../../lsp-types-max", version = "26.6.8" }
oxigraph = { version = "0.5.8", default-features = false, features = ["rdf-12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
