[package]
name = "lsp-max-specgen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate Rust protocol types from the official LSP 3.18 metaModel.json."
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
indexmap = { version = "2", features = ["serde"] }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
lsp-max-protocol = { path = "../../lsp-max-protocol" }
