[package]
name = "tower-lsp-max-playground"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "tower-lsp-max-playground"
path = "src/main.rs"

[[bin]]
name = "lsif_demo"
path = "src/bin/lsif_demo.rs"

[dependencies]
async-trait = "0.1"
dashmap = "5.1"
ropey = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
tower-lsp-max = { path = "../..", features = ["proposed"] }
lsp-types-max = { path = "../../../lsp-types-max", features = ["proposed"] }
url = "2.5"
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
proposed = ["tower-lsp-max/proposed", "lsp-types-max/proposed"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("proposed"))'] }
