[package]
name = "tower-lsp-max-cli"
version = "26.6.4"
edition = "2021"

[dependencies]
clap-noun-verb = { path = "/Users/sac/clap-noun-verb" }
clap-noun-verb-macros = { path = "/Users/sac/clap-noun-verb/clap-noun-verb-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
linkme = "0.3.36"
tower-lsp-max = { path = "../.." }
tower-lsp-max-protocol = { path = "../../tower-lsp-max-protocol" }
lsp-types = "0.97.0"
tower-lsp-max-agent = { path = "../../tower-lsp-max-agent", version = "26.6.4" }
tower-lsp-max-runtime = { path = "../../tower-lsp-max-runtime", version = "26.6.4" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"