[package]
name = "tower-lsp-max-cli"
version = "26.6.9"
edition = "2021"

[dependencies]
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
linkme = "0.3.36"
tower-lsp-max = { path = "../.." }
tower-lsp-max-protocol = { path = "../../tower-lsp-max-protocol" }
lsp-types-max = { path = "../../../lsp-types-max" }
tower-lsp-max-agent = { path = "../../tower-lsp-max-agent", version = "26.6.9" }
tower-lsp-max-runtime = { path = "../../tower-lsp-max-runtime", version = "26.6.9" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"