[package]
name = "wasm4pm-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ocel-core = { path = "../../../wasm4pm/crates/ocel-core" }
wasm4pm-compat = { path = "../../../wasm4pm-compat" }

[[bin]]
name = "wasm4pm-lsp"
path = "src/main.rs"
