[package]
name = "wasm4pm-lsp"
version = "26.6.6"
edition = "2021"

[dependencies]
tower-lsp-max = { path = "../..", features = ["proposed"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gc005-wasm4pm-adapter = { path = "../gc005-wasm4pm-adapter" }

[[bin]]
name = "wasm4pm-lsp"
path = "src/main.rs"
