[package]
name = "anti-llm-cheat-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Anti-LLM/telemetry language server example using lsp-max"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap-noun-verb = "26.6.2"
clap-noun-verb-macros = "26.6.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
glob = "0.3"
aho-corasick = "1"
ignore = "0.4"
memchr = "2.5"
rustc-hash = { workspace = true }
lsp-max = { path = "../../" }
parking_lot = { workspace = true }
lsp-types-max = { path = "../../../lsp-types-max", version = "26.6.8", features = ["proposed"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tree-sitter = { workspace = true }
tree-sitter-rust = "0.24"
blake3 = "1"
wasm4pm-compat = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.2"
predicates = "3.1"
lsp-max-playground = { path = "../../crates/playground" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "perf_refactors"
harness = false
